--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,8 +1,8 @@
 <meta charset="utf-8">
-<title>Pixi Challenge</title>
+<title>PuckPuck</title>
 
 <!--Fonts-->
-<link href="https://fonts.googleapis.com/css?family=Nova+Script" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Aref+Ruqaa" rel="stylesheet">
 
 <!--Main Style Sheet-->
 <link rel="stylesheet" type="text/css" href="/stylesheets/main.css" />
@@ -33,6 +33,7 @@
 <script src="src/tools/drawtools.js"></script>
 <script src="src/tools/effects.js"></script>
 <script src="src/tools/timer.js"></script>
+<script src="src/tools/mics.js"></script>
 
 <!--States-->
 <script src="src/states/state.js"></script>
