--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,4 +1,7 @@
-<div class="ui secondary pointing menu">
+<div class="ui top menu">
+    <div class="item">
+        <img src="smoreley.png">
+    </div>
     <a class="active item" href="/">
         Home
     </a>
