--- a/views/pages/stats.ejs
+++ b/views/pages/stats.ejs
@@ -4,70 +4,129 @@
         <% include ../partials/header.ejs %>
     </head>
 
-    <body>
-        <div class="ui secondary pointing menu">
-            <a class="item" href="/">
-                Home
-            </a>
-            <a class="active item" href="stats">
-                Stats
-            </a>
-            <a class="item" href="guide">
-                Guide
-            </a>
-            <div class="right menu">
+    <body class="Site">
+        <main class="Site-content">
+            <!--NAV-->
+            <div class="ui top menu">
                 <div class="item">
-                    <div id="playerName" class="ui icon input">
+                    <img src="smoreley.png">
+                </div>
+                <a class="item" href="/">
+                    Home
+                </a>
+                <a class="active item" href="stats">
+                    Stats
+                </a>
+                <a class="item" href="guide">
+                    Guide
+                </a>
+                <div class="right menu">
+                    <div class="item">
+                        <div id="playerName" class="ui icon input">
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
 
-        <div class="ui container">
-            <h1>Get your stats all your stats here!</h1>
-        </div>
-        
-        <div class="ui container">
-            <table class="ui striped table">
-                <thead>
-                    <tr>
-                        <th>Name</th>
-                        <th>score</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <% pages.forEach(function(d) { %>
-                    <tr>
-                        <td><%= d.name %></td>
-                        <td><%= d.score %></td>
-                    </tr>
-                    <% }); %>
-                </tbody>
-            </table>
-        </div>
-        
-        <div class="ui raised padded container segment">
-            <%= JSON.stringify(pages) %>
-        </div>
-        
-        <div class="ui raised padded container segment">
-            <form class="ui form" method="post" action="upadateStats">
-                <div class="field">
-                    <label>First Name</label>
-                    <input type="text" name="name" placeholder="Name here">
-                </div>
-                <div class="field">
-                    <label>Score</label>
-                    <input type="text" name="score" placeholder="Score here">
-                </div>
-                <div class="field">
-                    <label>Level</label>
-                    <input type="text" name="level" placeholder="Level here">
-                </div>
-                <button class="ui button" type="submit">Submit</button>
-            </form>
-        </div>
+            <% var highestScore = 0; var totalScore = 0; %>
+            <% pages.forEach(function(d) { %>
+                <% if (highestScore < d.score) highestScore = d.score; %>
+                <% totalScore += d.score; %>
+            <% }); %>
 
+            <div class="ui container centered">
+                <div class="ui grid centered">
+                    <div class="ui statistics">
+                        <div class="statistic">
+                            <div class="value">
+                                <%= highestScore %>
+                            </div>
+                            <div class="label">
+                                highestScore
+                            </div>
+                        </div>
+                        <div class="ui large statistic">
+                            <div class="value">
+                            <%= pages.length %>
+                            </div>
+                            <div class="label">
+                                Unique Players
+                            </div>
+                        </div>
+                        <div class="statistic">
+                            <div class="value">
+                                <%= totalScore %>
+                            </div>
+                            <div class="label">
+                                Cumulative
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="ui container">
+                <h1 class="ui header">Get your stats all your stats here!</h1>
+            </div>
+
+            <div class="ui container">
+                <table class="ui striped table">
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>score</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <% pages.forEach(function(d) { %>
+                        <tr>
+                            <td><%= d.name %></td>
+                            <td><%= d.score %></td>
+                        </tr>
+                        <% }); %>
+                    </tbody>
+                </table>
+            </div>
+
+            <div class="ui raised padded container segment">
+                <%= JSON.stringify(pages) %>
+            </div>
+
+    <!--
+            <div class="ui raised padded container segment">
+                <form class="ui form" method="post" action="upadateStats">
+                    <div class="field">
+                        <label>First Name</label>
+                        <input type="text" name="name" placeholder="Name here">
+                    </div>
+                    <div class="field">
+                        <label>Score</label>
+                        <input type="text" name="score" placeholder="Score here">
+                    </div>
+                    <div class="field">
+                        <label>Level</label>
+                        <input type="text" name="level" placeholder="Level here">
+                    </div>
+                    <button class="ui button" type="submit">Submit</button>
+                </form>
+            </div>
+    -->
+
+            <div class="ui raised padded container segment ">
+                <form class="ui form" method="post" action="findPlayer">
+                    <div class="inline fields ui grid container centered">
+                        <label class="one wide column">Search</label>
+                        <div class="eleven wide column field">
+                            <input type="text" name="name" placeholder="Name here">
+                        </div>
+                        <div class="two wide column">
+                            <button class="ui button" type="submit">Submit</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+
+        </main>
         <% include ../partials/footer.ejs %>
     </body>
 </html>
