--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,24 +1,28 @@
- <div class="ui inverted vertical footer segment">
+<footer>
+<div class="ui inverted vertical footer segment">
     <div class="ui container">
       <div class="ui stackable inverted divided equal height stackable grid">
         <div class="three wide column">
-          <h4 class="ui inverted header">About</h4>
+          <h4 class="ui inverted header">Sitemap</h4>
           <div class="ui inverted link list">
-            <a href="#" class="item">Sitemap</a>
-            <a href="#" class="item">Contact Me</a>
+            <a href="/" class="item">Game</a>
+            <a href="/stats" class="item">Stats</a>
+            <a href="/Guide" class="item">Guide</a>
           </div>
         </div>
         <div class="three wide column">
-          <h4 class="ui inverted header">Services</h4>
+          <h4 class="ui inverted header">Shameless plugs</h4>
           <div class="ui inverted link list">
-            <a href="#" class="item">Banana Pre-Order</a>
-            <a href="#" class="item">Favorite X-Men</a>
+            <a href="http://www.skylerbelser.com/" class="item">My Website</a>
+            <a href="https://github.com/Smoreley" class="item">Github</a>
+            <a href="https://www.linkedin.com/in/skylerbelser" class="item">Linkedin</a>
           </div>
         </div>
         <div class="seven wide column">
           <h4 class="ui inverted header">Who made this?</h4>
-          <div class="container">This website, app, project, or what ever you want to call it was made by Skyler Belser</div>
+          <div class="container">This website, app, project, or what ever you want to call it was made by Skyler Belser. He thanks you for playing and hopes that you have a wonderful time.</div>
         </div>
       </div>
     </div>
   </div>
+</footer> 
